# minwin

./: .gitattributes  .gitignore  Cargo.toml  Windows.Win32.winmd  Windows.winmd
.github/workflows/: rust-ci.yml
md/: Windows.Wdk.winmd.zstd  Windows.Win32.Interop.winmd.zstd  Windows.Win32.winmd.zstd  Windows.winmd.zstd  layouts.json.zstd
src/: bind.rs  generator.rs  lib.rs  main.rs  parser.rs  resolver.rs
src/bind/: emit.rs  gather.rs
src/bind/emit/: constant.rs  function.rs  function_pointer.rs  interface.rs  ostream.rs  record.rs  shared.rs
tests/: constants.rs  enums.rs  functions.rs  generation.rs  interfaces.rs  parsing.rs  records.rs  resolves.rs  utils.rs
tests/data/: delegates.rs  enums.rs  input.rs  md_writer.rs  parking_lot.rs
tests/snapshots/: constants__casting__bindgen.snap  constants__casting__ls-targets_es-bindgen.snap  constants__casting__ls-targets_es-bindgen_-cs-minwin.snap  constants__regular__bindgen.snap  constants__regular__ls-targets_es-bindgen.snap  constants__regular__ls-targets_es-bindgen_-cs-minwin.snap  constants__regular__ls-targets_es-bindgen_-cs-minwin_rustcasing.snap  constants__regular__ls-targets_es-bindgen_rustcasing.snap  constants__strings__bindgen.snap  constants__strings__ls-targets_es-bindgen.snap  constants__strings__ls-targets_es-bindgen.snap.new  enums__always_emits_alias__bindgen.snap  enums__always_emits_alias__ls-targets_es-bindgen.snap  enums__always_emits_alias__ls-targets_es-minwin.snap  enums__always_emits_alias__ls-targets_es-minwin_-cs-minwin_rustcasing.snap  enums__always_emits_alias__ls-targets_es-minwin_rustcasing.snap  enums__core__bindgen.snap  enums__core__ls-targets_es-bindgen.snap  enums__core__ls-targets_es-minwin.snap  enums__core__ls-targets_es-minwin_-cs-minwin.snap  enums__core__ls-targets_es-minwin_rustcasing.snap  enums__handle_and_enum__bindgen.snap  enums__handle_and_enum__ls-targets_es-bindgen.snap  enums__handle_and_enum__ls-targets_es-minwin.snap  enums__handle_and_enum__ls-targets_es-minwin_rustcasing.snap  enums__simple__bindgen.snap  enums__simple__bindgen.snap.new  enums__simple__ls-targets_es-bindgen.snap  enums__simple__ls-targets_es-bindgen.snap.new  enums__simple__ls-targets_es-minwin.snap  enums__simple__ls-targets_es-minwin.snap.new  enums__simple__ls-targets_es-minwin_-cs-minwin.snap  enums__simple__ls-targets_es-minwin_-cs-minwin_rustcasing.snap  enums__simple__ls-targets_es-minwin_rustcasing.snap  functions__arches__bindgen.snap  functions__arches__ls-rawdylib_es-bindgen.snap  functions__arches__ls-targets_es-bindgen.snap  functions__no_return__bindgen.snap  functions__no_return__ls-rawdylib_es-bindgen.snap  functions__no_return__ls-rawdylib_es-bindgen_-cs-minwin.snap  (+16 more)
update/: Cargo.toml  clang.patch
update/src/: main.rs
