[package]
name = "minwin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "2.0"
camino = "1.1"
cargo_metadata = "0.15"
clap = { version = "4.0", features = ["derive"] }
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "extra-traits",
    "full",
    "parsing",
    "printing",
    #"span-locations",
] }
# Tracing logs
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
# Emission of logs to stdout
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
] }
ustr = { version = "0.9", features = ["serialization"] }
walkdir = "2.3"
# When bumping versions, run `cargo run --manifest-path update/Cargo.toml` to
# get the winmd files that match the publish commit
windows-metadata = "0.48"
windows-bindgen = "0.48"
zstd = "0.12"

[dev-dependencies]
insta = "1.28"
