[package]
name = "minwin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "2.0"
camino = "1.1"
cargo_metadata = "0.15"
clap = { version = "4.0", features = ["derive"] }
heck = "0.4"
nu-ansi-term = "0.47"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "extra-traits",
    "full",
    "parsing",
    "printing",
] }
# toml parsing
toml = "0.7"
# Tracing logs
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
# Emission of logs to stdout
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
] }
ustr = { version = "0.9", features = ["serialization"] }
walkdir = "2.3"
windows-bindgen = "0.49"
windows-metadata = "0.49"
zstd = "0.12"

[dev-dependencies]
insta = "1.28"
rstest = { version = "0.17", default-features = false }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# [patch.crates-io]
# windows-bindgen = { path = "../windows-rs/crates/libs/bindgen" }
