[package]
name = "update"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cargo_metadata = "0.15"
clang-ast = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zstd = "0.12"
